--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
    
     <div class="middle-container">
         <div class="profile">
-          <img class="My-photo" src="images/saravanan_photo" alt="profile-photo">
+          <img class="My-photo" src="images/saravanan_photo.png" alt="profile-photo">
           <h2>Hi there!</h2>
           <p class="intro">I'm a full-stack developer, currently learning developer tools and looking for a project to work on.
 
